--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import HeroIndex from "../components/portfolio/HeroIndex.astro";
 import Contact from "../components/portfolio/Contact.astro";
 import ListProjects from "../components/portfolio/ListProjects.astro";
 import { Icon } from "astro-icon/components";
-const pageTitle = "NeonMint by | Fernando Lopez | EFEELE ";
-const description = "Is a modern, minimalist template crafted for developers and digital creatives.";
+const pageTitle = "thedeaf.dev | Channing Brown ";
+const description = "Portfolio of a deaf developer from South Jersey.";
 const ogimage = {
   url: "/images/imagedefault.webp",
   alt: "Screenshot of a web portfolio with a modern and dark design. Featuring Fernando López, a Frontend Developer with 8 years of experience, highlighting his passion for development and technology. Includes contact sections, projects, and a technology stack with technologies like HTML5, JavaScript, TypeScript, Angular, Node.js, CSS, Tailwind, and more.",
